--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     </h1>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="#lista">
                         <img src="img/ico/user.png" />
                         <h2>Usuario</h2>
                         <p>Opciones Personalizadas</p>
