--- a/PopUp.html
+++ b/PopUp.html
@@ -1,77 +1,112 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <script src="Jquery/jquery-2.1.0.min.js"></script>
-    <script src="Jquery/jquery.mobile-1.4.2/jquery.mobile-1.4.2.js"></script>
-    <link href="Jquery/jquery.mobile-1.4.2/jquery.mobile-1.4.2.css" rel="stylesheet" />
+    <script src="Jquery/jquery.mobile-1.4.2/jquery.mobile-1.4.2.min.js"></script>
+    <link href="Jquery/jquery.mobile-1.4.2/jquery.mobile-1.4.2.min.css" rel="stylesheet" />
+    <script type="text/javascript" src="jsonsrc/script.js"></script>
     <title></title>
 </head>
 <body>
-    <div data- role="page">
+    <div data-role="page">
         <div data-role="header" data-position="fixed">
             <h1>Header</h1>
         </div>
-        <div data-role="content">
-            <ul data-role="listview" data-filter-placeholder="a" data-inset="true">
-                <li>
-                    <a href="#popupBasic">
-                        <img src="img/ico/4ico_rec.png" />
-                        <h3>Titulo</h3>
-                        <p>descripción</p>
-                    </a>
-                </li>
-            </ul>
-            <a class="ui-btn ui-corner-all ui-shadow ui-btn-inline" href="#PopUp" abp="20" data-transition="pop" data-rel="popup">Basic Popup</a>
-            <div id="popupBasic" abp="21" data-role="popup">
-                <p abp="22">This is a completely basic popup, no options set.</p>
+        <div data-role="content" id="ListaContentAll">
+            <a class="ui-btn" href="#PopUp" abp="20" data-transition="pop" data-rel="popup">Popup</a>
+
+            <div data-role="popup" id="PopUp" data-theme="b" style="top: 5%; left: 10%; right: 10%; width: 80%; height: 90%; position: fixed; overflow: scroll; ">
+                <a class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-icon-delete ui-btn-icon-notext ui-btn-right" href="#" data-rel="back" style="background-color:red;">close</a>
+                <center>
+                    <img src="img/ico/6ico_des.png" style="max-width:30%; margin:10px 10px; " />
+                </center>
+                <h2 style="text-wrap:normal; text-align:center">diam erat amet dolor ipsum sit laoreet sed dolor tincidunt nonumm..</h2>
+                <div data-role="collapsible-set" data-mini="true" class="ui-nodisc-icon ui-alt-icon" data-theme="a">
+                    <div data-role="collapsible" data-collapsed="false">
+                        <h3>Información</h3>
+                        <p style="text-wrap:normal">
+                            diam erat amet dolor ipsum sit laoreet sed dolor tincidunt nonummy diam ut nonummy erat. magna elit consectetuer sit sed tincidunt sit sit tincidunt sit aliquam magna consectetu...
+                        </p>
+                    </div>
+                    <div data-role="collapsible">
+                        <h3>Entidad</h3>
+                        <div data-controltype="textblock">
+                            <p abp="1783">
+                                <b abp="1784">
+                                    Entidad Nombre
+                                    <br abp="1801">
+                                </b>
+                            </p>
+                            <p abp="1783">
+                                <b abp="1784">
+                                    Contacto
+                                    <br abp="1791">
+                                </b>
+                            </p>
+                            <p abp="1783">
+                                <b abp="1784">
+                                    Entidad URL
+                                </b>
+                                <b abp="1784">
+                                    <br abp="1814">
+                                </b>
+                            </p>
+                        </div>
+                    </div>
+                    <div data-role="collapsible">
+                        <h3>Requisitos</h3>
+                        <p style="text-wrap:normal">
+                            Poblacion Objetivo
+                        </p>
+                        <b>
+                            Edad
+                        </b>
+                        <p>
+                            34
+                        </p>
+                        <p>
+                            Fecha Inicio
+                        </p>
+                        <p>
+                            Fecha Fin
+                        </p>
+                    </div>
+                    <div data-role="collapsible">
+                        <h3>
+                            Ubicación
+                        </h3>
+                        <div data-controltype="textblock">
+                            <p abp="1195">
+                                <b abp="1196">
+                                    Pais
+                                </b>
+                            </p>
+                            <p abp="1195">
+                                <b abp="1196">
+                                    Región
+                                    <br abp="1203">
+                                </b>
+                            </p>
+                            <p abp="1195">
+                                <b abp="1196">
+                                    Ciudad
+                                    <br>
+                                </b>
+                            </p>
+
+                        </div>
+                    </div>
+                </div>
+
             </div>
 
         </div>
         <div data-role="footer" data-position="fixed">
             <h3>botones de navegacion</h3>
         </div>
-
-        <div data-role="popup" id="PopUp" style="top: 40%; left: 10%; width: 300px; ">
-            <center>
-                <div data-role="header">
-                    <div data-role="navbar">
-                        <ul>
-                            <li><a href="#" data-icon="user"></a></li>
-                            <li><a href="#" data-icon="clock"></a></li>
-                            <li><a href="#" data-icon="info"></a></li>
-                            <li><a href="#popupcloseright" data-icon="delete"></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div data-role="content" id="popUpContent">
-                    <center>
-                        <img src="img/menu/1edu.png" style=" max-height:80px" />
-                    </center>
-                    <h2 id="poptitle" style="text-align:center">Titulo</h2>
-                    <p id="popdescripcion" style="text-align:justify">Descripcion</p>
-                </div>
-                <div data-role="footer">
-                    <div class="ui-grid-a">
-                        <div class="ui-block-a" style="text-align: center; background-color:#55ACEE ">
-                            <img src="img/RS/twitter.png" style="max-height: 20px; margin: 5px 5px;" />
-                        </div>
-                        <div class="ui-block-b" style="text-align: center; background-color: #3b5998">
-                            <img src="img/RS/facebook.png" style="max-height: 20px; margin: 5px 5px;" />
-                        </div>
-                    </div>
-                    <div class="ui-grid-b" style="text-align: center; background-color: #008511">
-                        <h3 style="text-align:center; color:white">
-                            ¡PARTICIPAR!
-                        </h3>
-                    </div>
-                </div>
-            </center>
-        </div>
-
-    </div>
-
         
-
+        
+    </div>
 </body>
 </html>
