--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <script src="Jquery/jquery-2.1.0.min.js"></script>
     <script src="Jquery/jquery.mobile-1.4.2/jquery.mobile-1.4.2.min.js"></script>
     <link href="Jquery/jquery.mobile-1.4.2/jquery.mobile-1.4.2.min.css" rel="stylesheet" />
     <script src="jsonsrc/jsoncall.js" type="text/javascript"></script>
     <script src="jsonsrc/jsonCount.js" type="text/javascript"></script>
-
+    <script type="text/javascript">
+        $(document).ready(function () {
+            getDataFromSvc();
+        });
+    </script>
     <title>SiJoven</title>
     <style>
         ui-popup-screen.in, .ui-popup-screen {
@@ -293,7 +297,21 @@
 
         </div>
         <script type="text/javascript">
-            allResults("ListaContentAll");
+
+            $(document).bind('pagechange', '#ListaAll', function () {
+                $('.ui-page-active .ui-listview').listview('refresh');
+                $('.ui-page-active :jqmData(role=content)').trigger('create');
+                console.log("update layout ListaAll");
+            });
+
+            $(document).on("pageinit", "#ListaAll", function (event) {
+
+                allResults("ListaContentAll");
+                console.log("all results finish");
+
+            });
+
+
         </script>
         <div data-role="footer" data-position="fixed">
             <div data-role="navbar">
@@ -359,9 +377,25 @@
         <div id="ListaContentEdu" data-role="content">
 
         </div>
+
         <script type="text/javascript">
-            filterResults("Aprende y Crece", "ListaContentEdu");
+
+            $(document).bind('pagechange', '#ListaEdu', function () {
+                $('.ui-page-active .ui-listview').listview('refresh');
+                $('.ui-page-active :jqmData(role=content)').trigger('create');
+                console.log("update layout ListaEmp");
+            });
+
+            $(document).on("pageinit", "#ListaEdu", function (event) {
+
+                filterResults(1, "ListaContentEdu");
+                console.log("all results finish");
+
+            });
+
+
         </script>
+
         <div data-role="footer" data-position="fixed">
             <div data-role="navbar">
                 <ul class="ui-nodisc-icon">
@@ -426,9 +460,25 @@
         <div id="ListaContentEmp" data-role="content">
 
         </div>
+
         <script type="text/javascript">
-            filterResults("Descubre y Trabaja", "ListaContentEmp");
+
+            $(document).bind('pagechange', '#ListaEmp', function () {
+                $('.ui-page-active .ui-listview').listview('refresh');
+                $('.ui-page-active :jqmData(role=content)').trigger('create');
+                console.log("update layout ListaEmp");
+            });
+
+            $(document).on("pageinit", "#ListaEmp", function (event) {
+
+                filterResults(2, "ListaContentEmp");
+                console.log("all results finish");
+
+            });
+
+
         </script>
+
         <div data-role="footer" data-position="fixed">
             <div data-role="navbar">
                 <ul class="ui-nodisc-icon">
@@ -494,7 +544,21 @@
 
         </div>
         <script type="text/javascript">
-            filterResults("Cuídate y Denuncia", "ListaContentPre");
+
+            $(document).bind('pagechange', '#ListaPre', function () {
+                $('.ui-page-active .ui-listview').listview('refresh');
+                $('.ui-page-active :jqmData(role=content)').trigger('create');
+                console.log("update layout ListaPre");
+            });
+
+            $(document).on("pageinit", "#ListaPre", function (event) {
+
+                filterResults(3, "ListaContentPre");
+                console.log("all results finish");
+
+            });
+
+
         </script>
         <div data-role="footer" data-position="fixed">
             <div data-role="navbar">
@@ -561,7 +625,21 @@
 
         </div>
         <script type="text/javascript">
-            filterResults("Diviértete y Disfruta", "ListaContentRec");
+
+            $(document).bind('pagechange', '#ListaRec', function () {
+                $('.ui-page-active .ui-listview').listview('refresh');
+                $('.ui-page-active :jqmData(role=content)').trigger('create');
+                console.log("update layout ListaRec");
+            });
+
+            $(document).on("pageinit", "#ListaRec", function (event) {
+
+                filterResults(4, "ListaContentRec");
+                console.log("all results finish");
+
+            });
+
+
         </script>
         <div data-role="footer" data-position="fixed">
             <div data-role="navbar">
@@ -628,7 +706,21 @@
 
         </div>
         <script type="text/javascript">
-            filterResults("Involúcrate y Ayuda", "ListaContentVol");
+
+            $(document).bind('pagechange', '#ListaVol', function () {
+                $('.ui-page-active .ui-listview').listview('refresh');
+                $('.ui-page-active :jqmData(role=content)').trigger('create');
+                console.log("update layout ListaVol");
+            });
+
+            $(document).on("pageinit", "#ListaVol", function (event) {
+
+                filterResults(5, "ListaContentVol");
+                console.log("all results finish");
+
+            });
+
+
         </script>
         <div data-role="footer" data-position="fixed">
             <div data-role="navbar">
@@ -695,7 +787,21 @@
 
         </div>
         <script type="text/javascript">
-            filterResults("Anímate y Participa", "ListaContentDes");
+
+            $(document).bind('pagechange', '#ListaVol', function () {
+                $('.ui-page-active .ui-listview').listview('refresh');
+                $('.ui-page-active :jqmData(role=content)').trigger('create');
+                console.log("update layout ListaVol");
+            });
+
+            $(document).on("pageinit", "#ListaDes", function (event) {
+
+                filterResults(6, "ListaContentDes");
+                console.log("all results finish");
+
+            });
+
+
         </script>
         <div data-role="footer" data-position="fixed">
             <div data-role="navbar">
@@ -752,15 +858,91 @@
 
     <!--About-->
     <div data-role="page" id="About">
-        <div data-role="header" data-position="fixed" data-add-back-btn="true">
-            <h1>
-                About
-            </h1>
-        </div>
         <div data-role="content">
-            <p>
-                Aqui va un Acerca de :p
-            </p>
+            <div class="ui-grid-a">
+                <div style="width:30%;" class="ui-block-a">
+                    <img style="max-width:100%; max-height:10%" src="img/About/ico_512.png" />
+                </div>
+                <div style="width:70%;" class="ui-block-b">
+                    <img style="width:100%;" src="img/About/icon-sijoven.png" />
+                    <h3 style="text-align:center">
+                        Si Joven App Ver. 1.1
+                    </h3>
+                </div>
+            </div>            
+            <hr style="border: 0px currentColor; height: 2px; margin-top: 12px; margin-bottom: 12px; background-color: rgb(204, 204, 204);">
+            <h5 style="text-align:center">
+                Autores
+            </h5>
+            <div class="ui-grid-a">
+                <div class="ui-block-a">
+                    <h4 style="text-align:center">
+                        MAD
+                    </h4>
+                </div>
+                <div class="ui-block-b">
+                    <h4 style="text-align:center">
+                        DFQ
+                    </h4>
+                </div>
+            </div>
+            <hr style="border: 0px currentColor; height: 2px; margin-top: 12px; margin-bottom: 12px; background-color: rgb(204, 204, 204);">
+            <center>
+                <img style="max-width: 90%;" src="img/About/Logo%20Colombia%20Joven.png" />
+            </center>
+            <center>
+                <img style="max-width: 90%;" src="img/About/mintic.png" />
+            </center>
+
+            <hr style="border: 0px currentColor; height: 2px; margin-top: 12px; margin-bottom: 12px; background-color: rgb(204, 204, 204);">
+            <h4 style="text-align:center">
+                Tenga en cuenta que esta aplicación requiere acceso a inernet y puede
+                consumir recursos de su plan de datos.
+            </h4>
+            <div class="ui-grid-a">
+                <div class="ui-block-a">                    
+                    <center>
+                        <img src="img/About/gplv3-127x51.png" />
+                    </center>
+                    <p style="text-align:center">
+                        Esta aplicación esta licenciada bajo el modelo GNU GPL (General Public License).
+                    </p>
+                </div>
+                <div class="ui-block-b">
+                    <center>
+                        <a href="http://creativecommons.org/licenses/by-sa/4.0/" rel="license">
+                            <img style="border-width: 0px;" alt="Licencia Creative Commons" src="http://i.creativecommons.org/l/by-sa/4.0/88x31.png">
+                        </a>
+                        <br>
+                        <span property="dct:title" rel="dct:type" href="http://purl.org/dc/dcmitype/StillImage"
+                              xmlns:dct="http://purl.org/dc/terms/">
+                            Iconos
+                        </span>
+                        por
+                        <a href="http://www.dfquintero.com" rel="cc:attributionURL" property="cc:attributionName"
+                           xmlns:cc="http://creativecommons.org/ns#">
+                            dfquintero
+                        </a>
+                        se distribuye bajo una
+                        <a href="http://creativecommons.org/licenses/by-sa/4.0/" rel="license">
+                            Licencia Creative Commons Atribución-CompartirIgual 4.0 Internacional
+                        </a>
+                        .
+                        <br>
+                        Basada en una obra en
+                        <a href="http://www.flaticon.es/autores/freepik" rel="dct:source" xmlns:dct="http://purl.org/dc/terms/">
+                            http://www.flaticon.es/autores/freepik
+                        </a>
+                        .
+                    </center>
+                </div>
+            </div>
+            <hr style="border: 0px currentColor; height: 2px; margin-top: 12px; margin-bottom: 12px; background-color: rgb(204, 204, 204);">
+            <a data-role="button" href="#inicio" style="background-color:greenyellow; color:black;" >
+                Volver
+            </a>
+
+
         </div>
     </div>
 </body>
